<resources>
    <string name="app_name">Keskonmange</string>
    <string name="MyProfile">Mon profil</string>
    <string name="DeconnectionFromToolbar">Se déconnecter </string>
    <string name="page_de_creation_de_recette">Aller à la page de création de recette</string>
    <string name="invalid_name">Veuillez remplir le champ</string>
    <string name="invalid_recipeYield">Veuillez remplir ce champ</string>
    <string name="invalid_prepTime">Veuillez remplir ce champ</string>
    <string name="invalid_cookTime">Veuillez remplir ce champ</string>
    <string name="invalid_ingredient">Veuilez entrer un ingrédient</string>
    <string name="invalid_recipe_description">Veuillez remplir le champ</string>
    <string name="remplissez_ici_les_informations_correspondant_votre_recette">Remplissez ici les informations correspondant à votre recette</string>
    <string name="nom_de_recette">Nom de recette</string>
    <string name="ingr_dients_s_par_par_un_point_virgule">Ingrédients, séparé par un point virgule \';\'</string>
    <string name="description">Description</string>
    <string name="submit">submit</string>
    <string name="bienvenue_sur_keskonmange">Bienvenue sur Keskonmange!</string>
    <string name="todo2">TODO</string>
    <string name="liste_ingredients">Liste d\'ingrédients</string>
    <string name="button_acceuil_create_recipe">Créer une recette</string>
    <string name="button_acceuil_consult_recipe">Qu\'est ce qu\'on mange ?</string>
    <string name="enregister_nouvelle_recette">Enregistrer ma recette</string>
    <string name="enregister_ingredients_consultor">Rechercher une recette</string>
    <string name="votre_profil">Votre profil</string>
    <string name="nom_et_pr_nom">Nom et prénom</string>
    <string name="email">Email</string>
    <string name="se_d_connecter">Se déconnecter</string>
    <string name="Consult_my_recipes">Consulter mes recettes</string>
    <string name="todo">TODO</string>
    <string name="invalid_titre">Veuillez entrer un titre à votre recette</string>
    <string name="invalid_description">"Veuillez entrer une description "</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>